k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-go-service
  labels:
    app: todo-app-go
spec:
  selector:
    app: todo-app-go
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort
